# flagrant

./: .gitignore  LICENSE  README.md  pyproject.toml
flagrant/: __init__.py  config.py  formatter.py  git_utils.py  main.py  prompt.py  reviewer.py
